Rebrand to Electroneum

--- a/en/ch06.md
+++ b/en/ch06.md
@@ -7,6 +7,6 @@ The `Transactions` tab let you walk through the transactions sent and received o
 (2) **Filters:** You can choose to filter out the transaction between specific dates, block height or amount. This can be useful if your wallet has tons of transactions.  
 (3) **Transaction list:** Here are displayed your transactions on this account. Each transaction is displayed with it's informations: `Amount`, `Tx ID`, `Height`, `Date`, `Confrimations`, `Fee` (for outgoing transactions), and `Description` *Optional*.  
 (4) **Details:** Clicking here will show you the transaction details: `Tx ID`, `Address Label`, `Address`, and `Payment ID`.  
-(5) **Prove transaction:** Clicking here will generate a payment proof in case of a dispute. More details on proving payments can be found [here](https://getmonero.org/resources/user-guides/prove-payment.html) *For outgoing transaction only*  
+(5) **Prove transaction:** Clicking here will generate a payment proof in case of a dispute. More details on proving payments can be found [here](https://getelectroneum.org/resources/user-guides/prove-payment.html) *For outgoing transaction only*  
 (6) **Set description:** You can optionally click here to set a description of your choice to this transaction.  
 (7) **Advanced:** Lets you choose in which formate the date should be displayed (you probably want to leave this option as it is).
