--- a/en/ch00.md
+++ b/en/ch00.md
@@ -1,19 +1,19 @@
 # Preface
-This guide is open source and maintained by ErCiccione, of the Monero community. If you have suggestions or wish to contribute to the development of this guide, feel free to open Pull Requests or Issues on the
-GitHub repository where this document is maintained: [github.com/monero-ecosystem/monero-GUI-guide](https://github.com/monero-ecosystem/monero-GUI-guide).
+This guide is open source (forked from ErCiccione guide) and maintained by Andre Patta, from Electroneum. If you have suggestions or wish to contribute to the development of this guide, feel free to open Pull Requests or Issues on the
+GitHub repository where this document is maintained: [github.com/andrepatta/etn-desktop-wallet-guide](https://github.com/andrepatta/etn-desktop-wallet-guide).
 &nbsp;
 
-For the online version of this guide, click [here](https://github.com/monero-ecosystem/monero-GUI-guide/blob/master/monero-GUI-guide.md)
+For the online version of this guide, click [here](https://github.com/andrepatta/etn-desktop-wallet-guide/blob/master/etn-desktop-wallet-guide.md)
 
 ## Translations
-This document will be localized into several languages. You will find all available translations in the [dedicated section on GitHub](https://github.com/monero-ecosystem/monero-GUI-guide/tree/master/translations) after the next version (1.6) of this guide will be released.
+This document will be localized into several languages. You will find all available translations in the [dedicated section on GitHub](https://github.com/andrepatta/etn-desktop-wallet-guide/tree/master/translations) after the next version (1.6) of this guide will be released.
 
 ## Windows Preparation
 If you are on Windows:
 
 + Make sure that your antivirus does not block the program.
 
-A miner is included in the Monero GUI software and, as a result, most anti virus software flags the Monero GUI files as malware and subsequently quarantines them. Fortunately, however, there's a fairly trivial work around you can use. That is:
+Cryptograph functions are included in the **Electroneum Desktop Wallet** software and, as a result, most anti virus software flags the **Electroneum Desktop Wallet** files as malware and subsequently quarantines them. Fortunately, however, there's a fairly trivial work around you can use. That is:
 
 + Create a new directory / folder.
 + Open your AV software.
