Update documentation for ETN Desktop Wallet

--- a/en/ch02.md
+++ b/en/ch02.md
@@ -7,11 +7,7 @@ On this page you can choose how to connect to the wallet and to the network:
 (2) **Create new wallet from hardware:** Create a new wallet from an hardware device (like Ledger or Trezor)  
 (3) **Open a wallet from file:** Choose this option to select a pre-existing wallet from your files with the extension `.keys`.  
 (4) **Restore wallet from keys or mnemonic seed:** Click here if you want to recover a pre-existing wallet using the mnemonic seed or the keys.  
-(5) **Change wallet mode:**  Click here to switch between modes and choose the wallet mode that best fits your needs.  
-(6) **Mainnet:** *Advanced:* Select this from the dropdown list to use the main Electroneum network  
-(7) **Testnet:** *Advanced:* Select this from the dropdown list if you would like to use a development network instead of the main network. Testnet is designed to let developers test new features that are not available on Mainnet or Stagenet.  
-(8) **Stagenet:** *Advanced:* Select this from the dropdown list if you would like to use a network for staging instead of the main network. Stagenet mimics the features of Mainnet and is designed to let end users test Electroneum without the risk of losing funds.  
-(9) **Number of KDF rounds:** *Advanced:* Adjust the number of Key Derivation Function rounds in order to enhance the overall security of the generated keys. Any random large number will increase the security.  
+(5) **Change wallet mode:**  Click here to switch between modes and choose the wallet mode that best fits your needs.   
 
 ## Create new wallet
 ![new](media/wizard_3-create.png)
@@ -19,8 +15,10 @@ On this page you can choose how to connect to the wallet and to the network:
 Here you can create a new wallet:
 
 (1) **Wallet name:** Give a name for your wallet (in this example `testname` is used).  
-(2) **Mnemonic seed: Write down your [mnemonic seed](https://getelectroneum.org/resources/electroneumpedia/mnemonicseed.html) and keep it safe. Your seed is the master key of your wallet, you can use it to recover your funds.**  
-(3) **Wallet location:** Select the destination folder of the wallet.  
+(2) **Mnemonic seed: Write down your "mnemonic seed" and keep it safe. Your seed is the master key of your wallet, you can use it to recover your funds.**  
+(3) **Wallet location:** Select the destination folder of the wallet.
+
+**Mnemonic Seed:** A 13 or 25 word phrase used to backup an Electroneum account, available in a number of languages. This 25-word phrase has all the information needed to view and spend funds from an Electroneum account.
 
 ### Add a password
 ![add password](media/wizard_4-pass.png)
@@ -55,15 +53,15 @@ On this page you can create a new wallet file from your hardware wallet. This wa
 (2) **Wallet location:** Select the destination folder of the wallet.   
 (3) **Create a new wallet from device:** Select this option if this is the first time you use a hardware wallet.  
 (4) **Restore a wallet from device:** Choose this option if you already had a hardware wallet and want to restore it.  
-**Creation Date or Restore height (optional):** *Restore only:* If you know the date or block height that your wallet was created at, you can specify it here so the wallet doesn't have to scan the entire blockchain looking for your funds. For example, if your first transaction was included on `2017-07-08` in block `1350000`, you should put the previous day date (e.g. `2017-07-06`) or a slightly lower height (e.g. `1330000`) so the wallet will start scanning from there, saving you some time. More information about restore height on [StackExchange](https://electroneum.stackexchange.com/questions/7581/what-is-the-relevance-of-the-restore-height).  
-(5) **Subaddress lookahead (optional):** pregenerate a number of accounts with a number of subaddresses each.  
-(6) **Device name:** Select the hardware wallet you want to use. **Electroneum Desktop Wallet** currently supports the hardware wallet models Ledger Nano S/X and Trezor Model T.  
+**Creation Date or Restore height (optional):** *Restore only:* If you know the date or block height that your wallet was created at, you can specify it here so the wallet doesn't have to scan the entire blockchain looking for your funds. For example, if your first transaction was included on `2017-07-08` in block `1350000`, you should put the previous day date (e.g. `2017-07-06`) or a slightly lower height (e.g. `1330000`) so the wallet will start scanning from there, saving you some time. More information about restore height below.  
+(5) **Device name:** Select the hardware wallet you want to use. **Electroneum Desktop Wallet** currently supports the hardware wallet models Ledger Nano S/X and Trezor Model T.
+(6) **Subaddress lookahead (optional):** pregenerate a number of accounts with a number of subaddresses each.  
+  
 &nbsp;
 
-Step by step guides on how to generate a Electroneum wallet from a hardware wallet for all operating systems (StackExchange):  
-[How do I generate a Ledger Electroneum wallet with the GUI (electroneum-wallet-gui)?](https://electroneum.stackexchange.com/questions/9901/how-do-i-generate-a-ledger-electroneum-wallet-with-the-gui-electroneum-wallet-gui)
+**Restore Height:** The wallet application will scan the blockchain from the height you have given. If there were transaction linked to your address before that height, they will not be included and your balance will probably be incorrect (unless all the previous transactions add up to 0). Please, use a height that is a little before your first transaction on that address.
 
-[How do I generate a Trezor Electroneum wallet with the GUI (electroneum-wallet-gui)?](https://electroneum.stackexchange.com/questions/11437/how-do-i-generate-a-trezor-electroneum-wallet-with-the-gui-electroneum-wallet-gui/)
+
 
 ### Add a password
 ![add password](media/wizard_4-pass.png)
@@ -97,10 +95,9 @@ Restoring from your mnemonic seed is the easiest way to recover your wallet. You
 
 (1) **Wallet name:** Give a name for your wallet (in this example `testname` is used).  
 (2) **Mnemonic seed:** Paste your seed made of 25 (or 24) words.  
-(3) **Creation Date or Restore height (optional):** If you know the date or block height that your wallet was created at, you can specify it here so the wallet doesn't have to scan the entire blockchain looking for your funds. For example, if your first transaction was included on `2017-07-08` in block `1350000`, you should put the previous day date (e.g. `2017-07-06`) or a slightly lower height (e.g. `1330000`) so the wallet will start scanning from there, saving you some time. More information about restore height on [StackExchange](https://electroneum.stackexchange.com/questions/7581/what-is-the-relevance-of-the-restore-height).  
+(3) **Creation Date or Restore height (optional):** If you know the date or block height that your wallet was created at, you can specify it here so the wallet doesn't have to scan the entire blockchain looking for your funds. For example, if your first transaction was included on `2017-07-08` in block `135000`, you should put the previous day date (e.g. `2017-07-06`) or a slightly lower height (e.g. `133000`) so the wallet will start scanning from there, saving you some time.  
 (4) **Wallet location:** Select the destination folder of the wallet.  
 
-A detailed guide is available on getelectroneum.org: ['How to restore your account'](https://getelectroneum.org/resources/user-guides/restore_account.html)
 
 ### Restoring from keys
 ![restore from key](media/wizard_7-restore-keys.png)
@@ -111,11 +108,10 @@ Restoring from keys is quite easy and can be extremely useful, especially if you
 (2) **Account address:** The address of the wallet you are recovering.  
 (3) **View key:** Your private view key (needed to be able to check your funds).  
 (4) **Spend key:** Your private spend key (needed to spend your funds).  
-(5) **Creation Date or Restore height (optional):** If you know the date or block height that your wallet was created at, you can specify it here so the wallet doesn't have to scan the entire blockchain looking for your funds. For example, if your first transaction was included on `2017-07-08` in block `1350000`, you should put the previous day date (e.g. `2017-07-06`) or a slightly lower height (e.g. `1330000`) so the wallet will start scanning from there, saving you some time. More information about restore height on [StackExchange](https://electroneum.stackexchange.com/questions/7581/what-is-the-relevance-of-the-restore-height).  
+(5) **Creation Date or Restore height (optional):** If you know the date or block height that your wallet was created at, you can specify it here so the wallet doesn't have to scan the entire blockchain looking for your funds. For example, if your first transaction was included on `2017-07-08` in block `135000`, you should put the previous day date (e.g. `2017-07-06`) or a slightly lower height (e.g. `133000`) so the wallet will start scanning from there, saving you some time.  
 (6) **Wallet location:** Select the destination folder of the wallet.  
 
 When everything is ready click the right arrow and then the `Use Electroneum` button.  
-A detailed guide is available on getelectroneum.org: ['Restoring wallet from keys'](https://getelectroneum.org/resources/user-guides/restore_from_keys.html)
 
 ## Open a wallet from file
 After clicking this option a window will pop up. Navigate to your file with the extension `.keys`, select it and click the right arrow.
