--- a/en/ch08.md
+++ b/en/ch08.md
@@ -5,10 +5,12 @@ The `Settings` tab provides tools for customizing configuration options.
 ![settings-wallet](media/black_settings-wallet.png)
 
 (1) **Close this wallet:** Click here to safely close the current wallet  
-(2) **Create a view-only wallet:** Click here to generate a view-only (or audit) wallet, which is capable to see existing outgoing transactions and all incoming transactions. See this [user-guide](https://getelectroneum.org/resources/user-guides/view_only.html) for more information.  
+(2) **Create a view-only wallet:** Click here to generate a view-only (or audit) wallet, which is capable to see existing outgoing transactions and all incoming transactions. See below for more information.  
 (3) **Show seed & keys:** This button will redirect you to the [Seed and keys](#seed-and-keys) tab.  
 (4) **Rescan wallet balance:** Click here to rescan the blockchain for all the transaction. *Note: You will lose any information not stored on the blockchain (this includes destination addresses, tx secret keys, tx notes, etc.)*  
 (5) **Change wallet password:** Click here to change your password.
+
+**View-only Wallet:** A view-only wallet can only see which incoming transactions belong to you. It can not spend any of your ETN, in fact it can't even see outgoing transactions from this wallet.
 
 ### Interface
 ![settings_interface](media/black_settings-interface.png)
@@ -66,11 +68,11 @@ Use a remote node, do not download the blockchain. Check the ['About remote node
 
 The `Seeds & Keys` tab displays your wallets mnemonic seed as well as your secret view key, public view key, secret spend key, and public spend key.
 
-(1) **Mnemonic seed: DO NOT share your mnemonic seed with anyone. Store a copy securely.** The mnemonic seed is a 25 word phrase that contains all the information needed to view and spend funds. *Learn more about [mnemonic seeds](https://getelectroneum.org/resources/electroneumpedia/mnemonicseed.html).*  
+(1) **Mnemonic seed: DO NOT share your mnemonic seed with anyone. Store a copy securely.** The mnemonic seed is a 25 word phrase that contains all the information needed to view and spend funds. 
 (2) **Secret view key:** Secret view keys allows the holder to view your wallets incoming transactions, but not outgoing. It is sometimes useful for auditing purposes to give your secret view key to a third party.  
-(3) **Public view key:** The public view key is used for stealth address creation. *Learn more about [view keys](https://getelectroneum.org/resources/electroneumpedia/viewkey.html).*  
+(3) **Public view key:** The public view key is used for stealth address creation. 
 (4) **Secret spend key: DO NOT share your secret spend key with anyone. The secret spend key is used to sign transactions and should be regarded with the same security as your mnemonic seed.**  
-(5) **Public spend key:** The public spend key is used by the network to verify the signature of the key image you generate when you make a transaction. This is what prevents double-spends as the network enforces the rule that a key image can be spent only once. *Learn more about [spend keys](https://getelectroneum.org/resources/electroneumpedia/spendkey.html).*
+(5) **Public spend key:** The public spend key is used by the network to verify the signature of the key image you generate when you make a transaction. This is what prevents double-spends as the network enforces the rule that a key image can be spent only once.
 
 ![seed-keys](media/black_seed-keys_2.png)
 
