--- a/en/ch08.md
+++ b/en/ch08.md
@@ -17,11 +17,10 @@ The `Settings` tab provides tools for customizing configuration options.
 
 The `Interface` tab is where you can adjust the settings of the GUI wallet. The most important options are:
 
-(1) **Hide balance:** If you are running your wallet in public, you may want to hide its balance. This can be useful for point of sales systems.  
-(2) **Enable Payment ID:** Long payment IDs are disabled by default. Click here to enable it. This can be useful for transfers to exchanges that require a long payment ID such as Binance (at the time of writing). Using long payment IDs is detrimental to your privacy. Please ask services that still use this deprecated feature to use subaddresses instead.  
-(3) **Light theme:** Switch to the light theme.  
-(4) **Lock wallet:** Set this to automatically lock your wallet after N minutes of inactivity. This ensures no one is able to use your wallet while you are away from keyboard.  
-(5) **Enable displaying balance in other currencies:** Gives you the possibility to display your balance also in other currencies. You can select the price source and the currency you prefer (*USD* or *EUR*).
+(1) **Hide balance:** If you are running your wallet in public, you may want to hide its balance. This can be useful for point of sales systems.   
+(2) **Light theme:** Switch to the light theme.  
+(3) **Lock wallet:** Set this to automatically lock your wallet after N minutes of inactivity. This ensures no one is able to use your wallet while you are away from keyboard.  
+(4) **Enable displaying balance in other currencies:** Gives you the possibility to display your balance also in other currencies. You can select the price source and the currency you prefer (*USD* or *EUR*).
 
 ### Local Node
 ![settings_local-node](media/black_settings-node-local_node.png)
@@ -61,7 +60,8 @@ Use a remote node, do not download the blockchain. Check the ['About remote node
 (4) **Wallet creation height:** Change the block height that a wallet rescan will go back to.  
 (5) **Wallet log path:** Where the logs for this wallet will be saved.  
 (6) **Wallet mode:** Display the wallet mode chosen in the [wizard](#choose-wallet-mode).  
-(7) **Copy to clipboard:** Copy all information to clipboard.  
+(7) **Graphics Mode:** Current Graphics Mode usued to render the wallet interface.
+(8) **Copy to clipboard:** Copy all information to clipboard.  
 
 ## Seed and keys
 ![seed-keys](media/black_seed-keys.png)
